@@ -1,6 +1,6 @@
 {
   "name": "simp-windowmanager",
-  "version": "4.1.3",
+  "version": "4.1.4",
   "author": "simp",
   "summary": "provides useful settings to set up various Window Managers.",
   "license": "Apache-2.0",
